# django-app

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
mysite/database/: db.sqlite
mysite/mysite/: settings.py
